tests/error/include_open_index.c
// fail "Newline in system include path."
#include <

